エラー画面見やすくするgem追加 ユーザー情報の変更にもreCAPTCHA導入

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -29,6 +29,8 @@
           <%= f.password_field :current_password, autocomplete: 'current-password', placeholder: '現在使用中のパスワード', class: 'form-control' %>
         </div>
 
+        <%= recaptcha_tags %>
+
         <div class='form-group'>
           <%= f.submit '登録情報を変更する', class: 'btn btn-outline-info btn-lg  form-control form-submit' %>
         </div>
