投稿削除のフラッシュが表示されなかったから微修正

--- a/app/views/microposts/destroy.js.erb
+++ b/app/views/microposts/destroy.js.erb
@@ -1,2 +1,4 @@
 $("#micropost_<%= @micropost.id %>").remove();
+$('#flash-message').fadeIn();
 $('#flash-message').html("<%= j(render 'shared/flash') %>");
+setTimeout("$('#flash-message').fadeOut('slow')", 4000);
